--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Udacity_Course_HTML5_CanvasGaming</title>
+        <title>JohnSoo</title>
     </head>
     <body>
         <canvas id="mainCanvas" width="1280" height="720"></canvas>
         <script src="index.js"></script>
-        <script>setup();</script>
+        <script>
+            window.onload = setup();
+        </script>
     </body>
 </html>
