--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <canvas id="mainCanvas" width="1280" height="720"></canvas>
         <script src="index.js"></script>
         <script>
-            window.onload = setup();
+            Initialize();
         </script>
     </body>
 </html>
