--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>JohnSoo</title>
+        <title>Webraria</title>
+        <link rel="stylesheet" href="index.css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
     </head>
     <body>
-        <canvas id="mainCanvas" width="1280" height="720"></canvas>
-        <script src="index.js"></script>
-        <script>
-            Initialize();
-        </script>
+        <h1>Webraria</h1>
+        
+        <div id="canvas-container">
+            <canvas id="mainCanvas" width="1280" height="720"></canvas>
+        </div>
+        
+        <script src="objects_variables.js"></script>
+        <script src="tilemap.js"></script>
+        <script src="worldgen.js"></script>
+        <script src="main.js"></script>
+        <script src="realtime.js"></script>
     </body>
 </html>
