--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
         <script src="worldgen.js"></script>
         <script src="main.js"></script>
         <script src="realtime.js"></script>
+        <script>
+            drawWorld();
+        </script>
     </body>
 </html>
