--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         <script src="objects_variables.js"></script>
         <script src="tilemap.js"></script>
         <script src="worldgen.js"></script>
-        <script src="main.js"></script>
+        <script src="setup.js"></script>
         <script src="realtime.js"></script>
         <script>
             drawWorld();
+            startGame();
         </script>
         
     </body>
