--- a/WebrariaTesting_Dev-master/webraria.html
+++ b/WebrariaTesting_Dev-master/webraria.html
@@ -22,6 +22,7 @@
         <script>
             drawWorld();
             startGame();
+            //코드정리, 주석
         </script>
         
     </body>
