--- a/www/webraria.html
+++ b/www/webraria.html
@@ -8,13 +8,9 @@
       href="https://fonts.googleapis.com/css?family=Lato:100"
       rel="stylesheet"
     />
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
   <body>
-    <div id="canvas-container">
-      <canvas id="mainCanvas" width="1920" height="1080"></canvas>
-    </div>
-
+    <canvas id="main_canvas" width="100%" height="100%"></canvas>
     <script src="bundle.js"></script>
   </body>
 </html>
